--- a/src/app/browsersource/elements/elements.component.html
+++ b/src/app/browsersource/elements/elements.component.html
@@ -13,6 +13,7 @@
     <app-obs *ngIf="element?.type === 'obs'" [element]=element></app-obs>
     <app-chat *ngIf="element?.type === 'chat'" [element]=element></app-chat>
     <app-gif *ngIf="element?.type === 'gif'" [element]=element [viewport]="viewport"></app-gif>
+    <app-image *ngIf="element?.type === 'image'" [element]=element [viewport]="viewport"></app-image>
   </div>
 
 </div>
