--- a/src/app/browsersource/elements/video/video.component.html
+++ b/src/app/browsersource/elements/video/video.component.html
@@ -4,8 +4,8 @@
     height: (+viewport.height - (+viewport.padding*2))+'px',
     alignItems: alignItems ? alignItems : 'center',
     justifyContent: justifyContent ? justifyContent : 'center'
-}">
-    <video *ngIf="element" #videoPlayer (loadeddata)="onLoadedData()" (ended)="onPlaybackEnded()" (error)="onError($event)" [ngStyle]="style">
+}" [style.opacity]="!ready ? '0' : 'initial'">
+    <video *ngIf="element" [@innerOUT]="element.innerTransitionOUT" [@in]="element.innerTransitionIN" #videoPlayer (loadeddata)="onLoadedData()" (ended)="onPlaybackEnded()" (error)="onError($event)" [ngStyle]="style">
         <source [src]="element.src" (error)="onError($event)">
     </video>  
 </div>
