better elements containers and new borders

--- a/src/app/browsersource/elements/tts/tts.component.html
+++ b/src/app/browsersource/elements/tts/tts.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="viewport-flex">
     <audio *ngIf="element" #ttsPlayer (loadeddata)="onLoadedData()" (ended)="onPlaybackEnded()">
         <source *ngIf="encodedTTS" [src]="encodedTTS" (error)="onError($event)">
     </audio>  
