--- a/src/app/browsersource/elements/audio/audio.component.html
+++ b/src/app/browsersource/elements/audio/audio.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="viewport-flex">
     <audio *ngIf="element" #audioPlayer (loadeddata)="onLoadedData()" (error)="onError($event)" (ended)="onPlaybackEnded()">
         <source [src]="element.src" (error)="onError($event)">
     </audio>  
