--- a/src/app/browsersource/elements/elements.component.html
+++ b/src/app/browsersource/elements/elements.component.html
@@ -4,8 +4,6 @@
   padding: viewport.padding+'px'
 }">
   
-  <div *ngIf="cantPlay" style="color: red; font-weight: bold;">IF YOU OPEN THIS ON A BROWSER YOU NEED TO INTERACT WITH THE PAGE BEFORE IT CAN PLAY MEDIA</div>
-
   <div [@in]="element['transition IN']" [@out]="element['transition OUT']" *ngFor="let element of currentElements">
     <app-video *ngIf="element?.type === 'video'" [element]=element [viewport]="viewport"></app-video>
     <app-audio *ngIf="element?.type === 'audio'" [element]=element></app-audio>
@@ -15,5 +13,7 @@
     <app-gif *ngIf="element?.type === 'gif'" [element]=element [viewport]="viewport"></app-gif>
     <app-image *ngIf="element?.type === 'image'" [element]=element [viewport]="viewport"></app-image>
   </div>
+
+  <div *ngIf="cantPlay" style="color: red; font-weight: bold; position: absolute;">IF YOU OPEN THIS ON A BROWSER YOU NEED TO INTERACT WITH THE PAGE BEFORE IT CAN PLAY MEDIA</div>
 
 </div>
