--- a/src/app/browsersource/elements/image/image.component.html
+++ b/src/app/browsersource/elements/image/image.component.html
@@ -1,12 +1,7 @@
-<div class="container" [ngStyle]="{
-    display: 'flex',
-    width: (+viewport.width - (+viewport.padding*2))+'px',
-    height: (+viewport.height - (+viewport.padding*2))+'px',
-    alignItems: alignItems ? alignItems : 'center',
-    justifyContent: justifyContent ? justifyContent : 'center'
-}" [style.opacity]="!ready ? '0' : 'initial'">
-    <img    [@innerOUT]="element.innerTransitionOUT" [@in]="element.innerTransitionIN" 
-            [src]="element.src"
-            (load)="onLoadedData()"
-            [ngStyle]="style">
+<div class="viewport-flex" [ngStyle]="viewportStyle" [style.opacity]="!loaded ? '0' : 'initial'">
+
+    <div [ngStyle]="outerStyle" class="outer-container" [class.rainbow]="outerStyle.rainbow" [class.vaporwave]="outerStyle.vaporwave" [@innerOUT]="element.innerTransitionOUT" [@in]="element.innerTransitionIN" >
+        <img [ngStyle]="innerStyle"[src]="element.src"(load)="onLoadedData()">
+    </div>
+
 </div>
