--- a/src/app/browsersource/elements/video/video.component.html
+++ b/src/app/browsersource/elements/video/video.component.html
@@ -1,11 +1,13 @@
-<div class="container" [ngStyle]="{
-    display: 'flex',
-    width: (+viewport.width - (+viewport.padding*2))+'px',
-    height: (+viewport.height - (+viewport.padding*2))+'px',
-    alignItems: alignItems ? alignItems : 'center',
-    justifyContent: justifyContent ? justifyContent : 'center'
-}" [style.opacity]="!ready ? '0' : 'initial'">
-    <video *ngIf="element" [@innerOUT]="element.innerTransitionOUT" [@in]="element.innerTransitionIN" #videoPlayer (loadeddata)="onLoadedData()" (ended)="onPlaybackEnded()" (error)="onError($event)" [ngStyle]="style">
-        <source [src]="element.src" (error)="onError($event)">
-    </video>  
+<div class="viewport-flex" [ngStyle]="viewportStyle" [style.opacity]="!loaded ? '0' : 'initial'">
+    
+    <div [ngStyle]="outerStyle" class="outer-container" [class.rainbow]="outerStyle.rainbow" [class.vaporwave]="outerStyle.vaporwave" [@innerOUT]="element.innerTransitionOUT" [@in]="element.innerTransitionIN">
+        <video [ngStyle]="innerStyle" 
+                *ngIf="element" 
+                #videoPlayer 
+                (loadeddata)="onLoadedData()" 
+                (ended)="onPlaybackEnded()" 
+                (error)="onError($event)">
+            <source [src]="element.src" (error)="onError($event)">
+        </video>  
+    </div>
 </div>
