--- a/src/app/browsersource/elements/elements.component.html
+++ b/src/app/browsersource/elements/elements.component.html
@@ -4,7 +4,7 @@
   padding: viewport.padding+'px'
 }">
   
-  <div [@in]="element['transition IN']" [@out]="element['transition OUT']" *ngFor="let element of currentElements">
+  <div [@in]="element.transitionIN" [@out]="element.transitionOUT" *ngFor="let element of currentElements">
     <app-video *ngIf="element?.type === 'video'" [element]=element [viewport]="viewport"></app-video>
     <app-audio *ngIf="element?.type === 'audio'" [element]=element></app-audio>
     <app-tts *ngIf="element?.type === 'tts'" [element]=element></app-tts>
